PIofSF/force-app/main/default/objects/Module_Response__c/fields/Status_Completed__c.field-meta.xml
<CustomField>
    <fullName>Status_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status Completed</label>
    <type>Checkbox</type>
</CustomField>