PIofSF/force-app/main/default/objects/Module_Response__c/fields/Unit_Response_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Unit_Response_Quantity__c</fullName>
    <label>Unit Response Quantity</label>
    <summaryFilterItems>
        <field>Unit_Response__c.Status__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Unit_Response__c.Module_Response__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>